Removed some commented code,

--- a/html/style.css
+++ b/html/style.css
@@ -55,7 +55,7 @@ span, .red{
 #health, #hunger, .dataText{
   color: lightcoral;
   background-color: black;
-  font-family: 'Courier New', Courier, monospace
+  font-family: 'Courier New', Courier, monospace;
 }
 
 /* #nestCanvas{
