OOOH PLAYERS COOL LOOKIN OR SOMETHING

--- a/html/style.css
+++ b/html/style.css
@@ -1,70 +1,5 @@
-body{
-  background: #1C2333;
-  color: white;
-  font-family: 'Consolas';
-}
-
-label{
-  width: 5%;
-  display: inline-block;
-  text-align: right;
-}
-
-input{
-  background: #e5e5e5;
-  color: #303030;
-  font-size: 120%;
-  border: #303030;
-  border-spacing: 2px;
-}
-
-.Message{
-  color: #a0a0a0;
-}
-
-#Roomconnect{
-  background: #1C2333;
-  border-radius: 1%;
-  padding-left: 1%;
-  
-}
-
-#Title{
-  font-size: 300%;
-}
-
-span, .red{
-  color:white;
-  background: red;
-}
-
-#chatFieldset{
-  /* font-family: monospace, consolas; */
-  float:unset;
-  clear:left;
-  width:50%
-}
-
-#health, #hunger, .dataText{
-  color: lightcoral;
-  background-color: black;
-  font-family: 'Courier New', Courier, monospace;
-}
-
-/* #nestCanvas{
-  
-} */
-
-.hudbutton{
-  color: lightseagreen;
-  background-color: black;
-}
-.hudbutton:hover{
-  color:black;
-  background-color: white;
-}
-
-#chatScroller{
-  height: 50px;
-  overflow-y: scroll;
+html, body {
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
 }
